# Langar

./: CMakeLists.txt  GeneralStructs.h  Main.c  README.md
Langar/: General.h  Main.c  ObjectsStructs.h  Structs.h
Langar/Compiler/: Compiler.c  Compiler.h  Conditions.c  Functions.c  Loops.c  TemplatesIA32.c  TemplatesIA32.h  Variables.c
Langar/Identifier/: Identifier.c  Identifier.h
Langar/Lexer/: Lexer.c  Lexer.h  LexeredCode.c
Langar/Organizer/: Organizer.c  Organizer.h
Langar/Shunting-yard/: ShuntingYard.c  ShuntingYard.h
Langar/Tokenizer/: Tokenizer.c  Tokenizer.h
Lexer/: Lexer.c  Lexer.h
